--- a/livenotifications/pom.xml
+++ b/livenotifications/pom.xml
@@ -7,6 +7,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>net.servicestack</groupId>
+			<artifactId>client</artifactId>
+			<version>1.0.24</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.5</version>
